--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^11.0.2",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
@@ -18,6 +19,7 @@
     "@types/nodemailer": "^6.4.7",
     "argon2": "^0.30.3",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
