--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-icons": "^3.0.0",
+    "cryptocurrency-icons": "^0.18.1",
     "react": "^18.2.0",
+    "react-crypto-icons": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.2",
